more overflow fixes

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 button {
@@ -29,6 +30,9 @@ input {
   box-shadow: rgba(0 0 0 / 5%) 0 54px 55px, rgba(0 0 0 / 5%) 0 -12px 30px,
     rgba(0 0 0 / 5%) 0 4px 6px, rgba(0 0 0 / 5%) 0 12px 3px,
     rgba(0 0 0 / 5%) 0 -3px 5px;
+  margin: 0 auto; /* add this */
+  display: block; /* add this */
+  text-align: center; /* Add this rule */
 }
 
 input:focus {
@@ -42,7 +46,7 @@ nav {
 }
 
 .app {
-  background-color: #3f3f46;
+  background-color: #27272a;
   display: flex;
 }
 
@@ -52,6 +56,31 @@ nav {
   flex-direction: column;
   justify-content: center;
   width: 100%;
+}
+
+.feed {
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 0;
+  width: 100%;
+}
+
+.feed li {
+  display: flex;
+  background-color: rgba(255 255 255 / 5%);
+  width: 91.666667%;
+  padding: 20px;
+  margin: 20px auto;
+  word-wrap: break-word;
+}
+
+.feed p {
+  font-size: 14px;
+  text-align: left;
+}
+
+.feed p.role {
+  min-width: 100px;
 }
 
 .history li {
@@ -67,16 +96,18 @@ nav {
 }
 
 .info {
-  color: rgba(255 255 255 / 50%);
+  color: #d4d4d8;
   font-size: 0.75rem; /* 12px */
   line-height: 1rem; /* 16px */
   padding: 0.625rem; /* 10px */
 }
 
 .input-container {
-  max-width: 42rem; /* 672px */
+  margin: 0 auto;
+  max-width: 80rem; /* 1280px */
   position: relative;
-  width: 100%;
+  width: 91.666667%;
+  margin-top: auto; /* Add this rule */
 }
 
 .main {
@@ -90,7 +121,7 @@ nav {
 }
 
 .side-bar {
-  background-color: #202123;
+  background-color: #18181b;
   display: flex;
   flex-direction: column;
   height: 100vh;
